Changes to make BigFlow run in Distributed mode